--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -1,7 +1,10 @@
+@import "../mixins/config";
 header {
+  position: fixed;
   background: $primary-color;
   z-index: 10;
   width: 100%;
+  top: 0;
   height: 90px;
   @include flexProperty(flex, row, flex-end, center);
   nav {
@@ -53,5 +56,10 @@ header {
       width: 100%;
       @include setFont(400, 1rem, 1rem, 1px);
     }
+  }
+}
+@include media-sm {
+  header {
+    display: none;
   }
 }
