--- a/src/scss/sections/_featuredoffer.scss
+++ b/src/scss/sections/_featuredoffer.scss
@@ -1,6 +1,7 @@
 .featured-offer{
     position: relative;
     top: 90px;
+    width: 100%;
     .detail-page-link{
         text-decoration: none;
     }   
