--- a/src/scss/sections/_herobanner.scss
+++ b/src/scss/sections/_herobanner.scss
@@ -1,33 +1,29 @@
-.banner_wrap{
-    position: relative;
-    top: 90px;
+.banner_wrap {
+  position: relative;
+  top: 90px;
+  width: 100%;
+  height: max-content;
+  .slick-slider {
     width: 100%;
-
-    .slick-slider {
-        .slick-arrow {
-          width: 37px;
-          height: 37px;
-        }
-      }
-      .slick-next {
-        content: "→";
-        position: absolute;
-        right: 0px;
-        color: #fff;
-        border-radius: 50%;
-        z-index: 2;
-
-      }
-      .slick-prev {
-        content: "→";
-        position: absolute;
-        left: 0px;
-        color: #fff;
-        border-radius: 50%;
-        z-index: 2;
-
-      }
-
-    
+    .slick-arrow {
+      width: 37px;
+      height: 37px;
+    }
+  }
+  .slick-next {
+    content: "→";
+    position: absolute;
+    right: 0px;
+    color: #fff;
+    border-radius: 50%;
+    z-index: 2;
+  }
+  .slick-prev {
+    content: "→";
+    position: absolute;
+    left: 0px;
+    color: #fff;
+    border-radius: 50%;
+    z-index: 2;
+  }
 }
-
