fixed responsive issue

--- a/src/scss/mixins/_config.scss
+++ b/src/scss/mixins/_config.scss
@@ -9,7 +9,7 @@
     }
 }
 @mixin media-lg {
-    @media only screen and (min-width: 768px) and (max-width: 1318){
+    @media only screen and (min-width: 768px) and (max-width: 1318px){
         @content;
     }
 }
