--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -3,6 +3,7 @@ footer {
   bottom: 0px;
   top: 90px;
   width: 100%;
+  overflow-x: hidden;
   background: $primary-color;
   height: 600px;
   .main-wrapper {
@@ -134,6 +135,22 @@ footer {
         .social-media {
           margin-top: 10px;
           width: 40%;
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
+}
+
+@include media-lg {
+  footer {
+    width: 100%;
+    top: 100px !important;
+    .main-wrapper {
+      .footer-element {
+        .social-media {
+          margin-top: 10px;
+          width: 35%;
           margin-bottom: 20px;
         }
       }
